// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a primary button correctly 1`] = `
<div>
  <button
    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
    type="button"
  >
    Click Me!
  </button>
</div>
`;

exports[`Button renders a secondary button correctly 1`] = `
<div>
  <button
    class="focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
    type="button"
  >
    Click Me!
  </button>
</div>
`;
